--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ dependencies = [
 packages = [{include = "mlir", from = "src"}]
 
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.12.7"
+pre-commit = "^4.2.0"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
