--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ packages = [{include = "mlir", from = "src"}]
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.12.7"
 pre-commit = "^4.2.0"
+pytest = "^8.4.1"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
