--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ packages = [{include = "mlir", from = "src"}]
 ruff = "^0.12.7"
 pre-commit = "^4.2.0"
 pytest = "^8.4.1"
+pytest-cov = "^7.0.0"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
