--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -28,8 +28,7 @@ jobs:
       - name: Run tests with coverage
         run: poetry run pytest --cov=src --cov-report=xml
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
         with:
-          files: ./coverage.xml
-          comment: true
+          token: ${{ secrets.CODECOV_TOKEN }}
