--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,10 @@ testpaths = ["tests"]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+lint.select = ["I"]  # Enable isort rules
+
+[tool.ruff.lint.isort]
+known-first-party = ["mlir"]
+known-local-folder = ["tests"]
